results/experiments/1_10/1432/2026-04-29_05-43-18/selection/batfish/candidate_1_vs_candidate_2_reachability.txt
--- Analyzing results/experiments/2026-04-29_05-20-44/1432/2026-04-29_05-43-18/candidates: candidate_1 vs candidate_2 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.85->100.0.0.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.84, Routes: [ospfE2 (Network: 100.0.0.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.84)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet4/0 with resolved next-hop IP: 10.0.0.79, Routes: [ospfE2 (Network: 100.0.0.0/24, Next Hop: interface FastEthernet4/0 ip 10.0.0.79)]), TRANSMITTED(FastEthernet4/0)), (RECEIVED(FastEthernet [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
